# Wikipedia_Scrapper

./: .gitignore  Main.py  README.md  pyproject.toml  sample_settings.py
WikipediaScrapper/: scrapy.cfg
WikipediaScrapper/WikipediaScrapper/: database_manage.py  items.py  middlewares.py  models.py  pipelines.py  settings.py
WikipediaScrapper/WikipediaScrapper/spiders/: books.py  contents.py  main_page.py  wikipedia.py
