[tool.poetry]
name = "wikipediascrapper"
version = "0.1.0"
description = ""
authors = ["Sadra Hosseini <sadrahosseini98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
