[tool.poetry]
name = "wikipediascrapper"
version = "0.1.0"
description = ""
authors = ["Sadra Hosseini <sadrahosseini98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
celery = {extras = ["beat"], version = "^5.4.0"}
redis = "^5.0.8"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
